# mednist_trials

./: .gitignore  MedNIST_Monai_PyTorch.ipynb  README.md
clf_mednist/: pyproject.toml
clf_mednist/clf_mednist/src/: dm.py
data/: clf_hyperparam.yml  hyperparam_colab.yml  hyperparam_mps.yml  random_split.json
envs/: sample.env
notebooks/: DataModule_monai.ipynb  TrainingModule_monai_timm.ipynb  TrainingModule_onebatch.ipynb  data_split.ipynb  hydra_trials.ipynb
