[tool.poetry]
name = "clf-mednist"
version = "0.1.0"
description = "Scripts to train classification model for MedNIST Dataset"
authors = ["gvkannan-explore <gvkanna.work@gmail.com>"]
readme = "README.md"
package-mode=False

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
tqdm = "^4.66.5"
rich = "^13.9.1"
monai = "^1.3.2"
lightning = "^2.4.0"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
